yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krystal-ns-service
spec:
  selector:
    app: krystal-ns
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
