yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krystal-ns-ingress
spec:
  rules:
  - host: api.krystal-ns.com
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: krystal-ns-service
              port:
                number: 80
